--- a/index.ipynb
+++ b/index.ipynb
@@ -43,10 +43,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.datasets import fetch_20newsgroups\n",
+    "import keras\n",
+    "from keras.layers import LSTM, GRU, Dense, GlobalMaxPool1D, Embedding, Dropout\n",
+    "from keras.preprocessing import text, sequence\n",
+    "from keras.models import Sequential\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "np.random.seed(0)\n",
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "markdown",
