--- a/index.ipynb
+++ b/index.ipynb
@@ -88,9 +88,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading 20news dataset. This may take a few minutes.\n",
+      "Downloading dataset from https://ndownloader.figshare.com/files/5975967 (14 MB)\n"
+     ]
+    }
+   ],
    "source": [
-    "newsgroups = None"
+    "newsgroups = fetch_20newsgroups()"
    ]
   },
   {
