Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -113,12 +113,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = None\n",
-    "labels = None"
+    "data = newsgroups.data\n",
+    "labels = newsgroups.target"
    ]
   },
   {
