--- a/index.ipynb
+++ b/index.ipynb
@@ -132,11 +132,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = None"
+    "labels = keras.utils.to_categorical(labels, 20)"
    ]
   },
   {
