Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -163,10 +163,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tokenizer = None\n",
-    "\n",
-    "list_tokenized_train = None\n",
-    "X_t = None"
+    "tokenizer = text.Tokenizer(num_words=20000)\n",
+    "tokenizer.fit_on_texts(list(data))\n",
+    "list_tokenized_train = tokenizer.texts_to_sequences(data)\n",
+    "X_t = sequence.pad_sequences(list_tokenized_train, maxlen=100)"
    ]
   },
   {
