Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -204,7 +204,14 @@
    "source": [
     "# LSTM Model\n",
     "\n",
-    "lstm_model = None\n"
+    "lstm_model = Sequential()\n",
+    "lstm_model.add(Embedding(20000, 128))\n",
+    "lstm_model.add(LSTM(50, return_sequences=True))\n",
+    "lstm_model.add(GlobalMaxPool1D())\n",
+    "lstm_model.add(Dropout(0.5))\n",
+    "lstm_model.add(Dense(50, activation='relu'))\n",
+    "lstm_model.add(Dropout(0.5))\n",
+    "lstm_model.add(Dense(20, activation='softmax'))"
    ]
   },
   {
