Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -234,7 +234,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lstm_model.compile(loss='categorical_crossentropy',\n",
+    "                   optimizer='adam', metrics=['accuracy'])"
+   ]
   },
   {
    "cell_type": "markdown",
