Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -231,12 +231,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "lstm_model.compile(loss='categorical_crossentropy',\n",
-    "                   optimizer='adam', metrics=['accuracy'])"
+    "                   optimizer='adam',\n",
+    "                   metrics=['accuracy'])"
    ]
   },
   {
