--- a/index.ipynb
+++ b/index.ipynb
@@ -312,7 +312,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lstm_model.fit(X_t,\n",
+    "               labels,\n",
+    "               epochs=2, batch_size=32, validation_split=0.1)"
+   ]
   },
   {
    "cell_type": "markdown",
