Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -311,11 +311,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 10182 samples, validate on 1132 samples\n",
+      "Epoch 1/2\n",
+      "  672/10182 [>.............................] - ETA: 1:16 - loss: 2.9969 - acc: 0.0521"
+     ]
+    }
+   ],
    "source": [
     "lstm_model.fit(X_t,\n",
     "               labels,\n",
-    "               epochs=2, batch_size=32, validation_split=0.1)"
+    "               epochs=2,\n",
+    "               batch_size=32,\n",
+    "               validation_split=0.1)"
    ]
   },
   {
