Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -318,7 +318,7 @@
      "text": [
       "Train on 10182 samples, validate on 1132 samples\n",
       "Epoch 1/2\n",
-      "  672/10182 [>.............................] - ETA: 1:16 - loss: 2.9969 - acc: 0.0521"
+      " 1920/10182 [====>.........................] - ETA: 1:00 - loss: 2.9950 - acc: 0.0536"
      ]
     }
    ],
