--- a/index.ipynb
+++ b/index.ipynb
@@ -318,7 +318,7 @@
      "text": [
       "Train on 10182 samples, validate on 1132 samples\n",
       "Epoch 1/2\n",
-      " 3392/10182 [========>.....................] - ETA: 49s - loss: 2.9932 - acc: 0.0575"
+      " 4672/10182 [============>.................] - ETA: 39s - loss: 2.9898 - acc: 0.0634"
      ]
     }
    ],
