--- a/index.ipynb
+++ b/index.ipynb
@@ -318,7 +318,7 @@
      "text": [
       "Train on 10182 samples, validate on 1132 samples\n",
       "Epoch 1/2\n",
-      " 6240/10182 [=================>............] - ETA: 28s - loss: 2.9822 - acc: 0.0662"
+      " 7552/10182 [=====================>........] - ETA: 19s - loss: 2.9717 - acc: 0.0719"
      ]
     }
    ],
