Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -318,7 +318,7 @@
      "text": [
       "Train on 10182 samples, validate on 1132 samples\n",
       "Epoch 1/2\n",
-      " 8928/10182 [=========================>....] - ETA: 9s - loss: 2.9503 - acc: 0.0775"
+      "10176/10182 [============================>.] - ETA: 0s - loss: 2.9252 - acc: 0.0806"
      ]
     }
    ],
