--- a/index.ipynb
+++ b/index.ipynb
@@ -318,7 +318,9 @@
      "text": [
       "Train on 10182 samples, validate on 1132 samples\n",
       "Epoch 1/2\n",
-      "10176/10182 [============================>.] - ETA: 0s - loss: 2.9252 - acc: 0.0806"
+      "10182/10182 [==============================] - 76s 7ms/step - loss: 2.9251 - acc: 0.0805 - val_loss: 2.6154 - val_acc: 0.1537\n",
+      "Epoch 2/2\n",
+      " 1248/10182 [==>...........................] - ETA: 1:04 - loss: 2.6210 - acc: 0.1498"
      ]
     }
    ],
