Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -320,7 +320,7 @@
       "Epoch 1/2\n",
       "10182/10182 [==============================] - 76s 7ms/step - loss: 2.9251 - acc: 0.0805 - val_loss: 2.6154 - val_acc: 0.1537\n",
       "Epoch 2/2\n",
-      " 1248/10182 [==>...........................] - ETA: 1:04 - loss: 2.6210 - acc: 0.1498"
+      " 2624/10182 [======>.......................] - ETA: 54s - loss: 2.5967 - acc: 0.1551"
      ]
     }
    ],
