--- a/index.ipynb
+++ b/index.ipynb
@@ -320,7 +320,7 @@
       "Epoch 1/2\n",
       "10182/10182 [==============================] - 76s 7ms/step - loss: 2.9251 - acc: 0.0805 - val_loss: 2.6154 - val_acc: 0.1537\n",
       "Epoch 2/2\n",
-      " 4000/10182 [==========>...................] - ETA: 45s - loss: 2.5386 - acc: 0.1700"
+      " 5312/10182 [==============>...............] - ETA: 35s - loss: 2.5007 - acc: 0.1771"
      ]
     }
    ],
