--- a/index.ipynb
+++ b/index.ipynb
@@ -320,7 +320,7 @@
       "Epoch 1/2\n",
       "10182/10182 [==============================] - 76s 7ms/step - loss: 2.9251 - acc: 0.0805 - val_loss: 2.6154 - val_acc: 0.1537\n",
       "Epoch 2/2\n",
-      " 6720/10182 [==================>...........] - ETA: 25s - loss: 2.4526 - acc: 0.1882"
+      " 8096/10182 [======================>.......] - ETA: 15s - loss: 2.4133 - acc: 0.1985"
      ]
     }
    ],
