Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -320,8 +320,18 @@
       "Epoch 1/2\n",
       "10182/10182 [==============================] - 76s 7ms/step - loss: 2.9251 - acc: 0.0805 - val_loss: 2.6154 - val_acc: 0.1537\n",
       "Epoch 2/2\n",
-      " 9408/10182 [==========================>...] - ETA: 5s - loss: 2.3744 - acc: 0.2099"
+      "10182/10182 [==============================] - 76s 7ms/step - loss: 2.3562 - acc: 0.2148 - val_loss: 1.8344 - val_acc: 0.4647\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7f014d5d2860>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
