--- a/index.ipynb
+++ b/index.ipynb
@@ -361,7 +361,14 @@
    "source": [
     "# GRU Model\n",
     "\n",
-    "gru_model = None\n"
+    "gru_model = Sequential()\n",
+    "gru_model.add(Embedding(20000, 128))\n",
+    "gru_model.add(GRU(50, return_sequences=True))\n",
+    "gru_model.add(GlobalMaxPool1D())\n",
+    "gru_model.add(Dropout(0.5))\n",
+    "gru_model.add(Dense(50, activation='relu'))\n",
+    "gru_model.add(Dropout(0.5))\n",
+    "gru_model.add(Dense(20, activation='softmax'))"
    ]
   },
   {
