Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -383,7 +383,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gru_model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])"
+   ]
   },
   {
    "cell_type": "markdown",
