Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -384,7 +384,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gru_model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])"
+    "gru_model.compile(loss='categorical_crossentropy',\n",
+    "                  optimizer='adam', metrics=['accuracy'])"
    ]
   },
   {
