Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -385,8 +385,7 @@
    "outputs": [],
    "source": [
     "gru_model.compile(loss='categorical_crossentropy',\n",
-    "                  optimizer='adam',\n",
-    "                  metrics=['accuracy'])"
+    "                  optimizer='adam', metrics=['accuracy'])"
    ]
   },
   {
