Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -444,8 +444,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 10182 samples, validate on 1132 samples\n",
+      "Epoch 1/2\n",
+      "   32/10182 [..............................] - ETA: 6:33 - loss: 3.0116 - acc: 0.0625"
+     ]
+    }
+   ],
+   "source": [
+    "gru_model.fit(X_t, labels, epochs=2, batch_size=32, validation_split=0.1)"
+   ]
   },
   {
    "cell_type": "markdown",
