Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -451,7 +451,7 @@
      "text": [
       "Train on 10182 samples, validate on 1132 samples\n",
       "Epoch 1/2\n",
-      "   32/10182 [..............................] - ETA: 6:33 - loss: 3.0116 - acc: 0.0625"
+      " 1728/10182 [====>.........................] - ETA: 55s - loss: 2.9972 - acc: 0.0527"
      ]
     }
    ],
