--- a/index.ipynb
+++ b/index.ipynb
@@ -451,7 +451,7 @@
      "text": [
       "Train on 10182 samples, validate on 1132 samples\n",
       "Epoch 1/2\n",
-      " 1728/10182 [====>.........................] - ETA: 55s - loss: 2.9972 - acc: 0.0527"
+      " 3456/10182 [=========>....................] - ETA: 41s - loss: 2.9916 - acc: 0.0564"
      ]
     }
    ],
