--- a/index.ipynb
+++ b/index.ipynb
@@ -451,7 +451,7 @@
      "text": [
       "Train on 10182 samples, validate on 1132 samples\n",
       "Epoch 1/2\n",
-      " 8384/10182 [=======================>......] - ETA: 11s - loss: 2.9456 - acc: 0.0917"
+      "10080/10182 [============================>.] - ETA: 0s - loss: 2.9093 - acc: 0.1049"
      ]
     }
    ],
