Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -451,7 +451,9 @@
      "text": [
       "Train on 10182 samples, validate on 1132 samples\n",
       "Epoch 1/2\n",
-      "10080/10182 [============================>.] - ETA: 0s - loss: 2.9093 - acc: 0.1049"
+      "10182/10182 [==============================] - 63s 6ms/step - loss: 2.9063 - acc: 0.1055 - val_loss: 2.5280 - val_acc: 0.3004\n",
+      "Epoch 2/2\n",
+      " 1312/10182 [==>...........................] - ETA: 54s - loss: 2.4818 - acc: 0.2614"
      ]
     }
    ],
