Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -453,7 +453,7 @@
       "Epoch 1/2\n",
       "10182/10182 [==============================] - 63s 6ms/step - loss: 2.9063 - acc: 0.1055 - val_loss: 2.5280 - val_acc: 0.3004\n",
       "Epoch 2/2\n",
-      " 2944/10182 [=======>......................] - ETA: 44s - loss: 2.4512 - acc: 0.2643"
+      " 4576/10182 [============>.................] - ETA: 34s - loss: 2.4018 - acc: 0.2694"
      ]
     }
    ],
