Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -453,7 +453,7 @@
       "Epoch 1/2\n",
       "10182/10182 [==============================] - 63s 6ms/step - loss: 2.9063 - acc: 0.1055 - val_loss: 2.5280 - val_acc: 0.3004\n",
       "Epoch 2/2\n",
-      " 7936/10182 [======================>.......] - ETA: 13s - loss: 2.2803 - acc: 0.2973"
+      " 9664/10182 [===========================>..] - ETA: 3s - loss: 2.2277 - acc: 0.3121"
      ]
     }
    ],
