Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -122,6 +122,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labe"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -442,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -453,8 +462,18 @@
       "Epoch 1/2\n",
       "10182/10182 [==============================] - 63s 6ms/step - loss: 2.9063 - acc: 0.1055 - val_loss: 2.5280 - val_acc: 0.3004\n",
       "Epoch 2/2\n",
-      " 9664/10182 [===========================>..] - ETA: 3s - loss: 2.2277 - acc: 0.3121"
+      "10182/10182 [==============================] - 62s 6ms/step - loss: 2.2190 - acc: 0.3147 - val_loss: 1.6996 - val_acc: 0.5610\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x7f01471a1da0>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
